<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/popular"
            android:icon="@drawable/ic_public_48px"
            android:title="@string/popular" />
        <item
            android:id="@+id/top_rate"
            android:icon="@drawable/ic_bar_chart_flat"
            android:title="@string/top_rate" />
        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_favorite_48px"
            android:title="@string/favourite" />
        <item
            android:id="@+id/activity_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

    </group>

</menu>
