<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        tools:context="com.android.ahmed.movieapp.ui.MovieDetailActivity"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <!-- Reference for CollapsingToolbarLayout: https://github.com/chrisbanes/cheesesquare -->
        <!--app:contentScrim="?attr/colorPrimary"-->

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/photo"
                style="@style/Theme.Bacon.Backdrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/movie_cover"
                android:src="@drawable/cover1"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"

                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cover"
                android:contentDescription="@string/movie_poster"
                android:layout_width="130dp"
                android:layout_height="180dp"
                android:layout_marginTop="6dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cover1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="163dp"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="8sp"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/PrimaryText"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="serif"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/cover"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Guardiands of the Galaxy"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="11dp"
                android:text="@string/release"
                android:textColor="@color/PrimaryText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/cover"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2012-02-14"
                android:layout_marginTop="11dp"
                android:text="TextView"
                android:textSize="17sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/textView3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rate"
                android:textColor="@color/PrimaryText"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/cover"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/PrimaryText"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.032"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cover"
                app:layout_constraintVertical_bias="1.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:text="Action · A group of intergalactic criminals are forced to work together to stop a fanatical warrior from taking control of the universe."
                android:textSize="17sp"
                app:layout_constraintHorizontal_bias="0.032"
                app:layout_constraintVertical_bias="1.0"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <RatingBar
                android:id="@+id/vote_count"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:isIndicator="true"
                android:numStars="5"
                tools:rating="3"
                app:layout_constraintLeft_toRightOf="@+id/cover"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginStart="8dp" />

            <ExpandableListView
                android:id="@+id/expandableListView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintHorizontal_bias="0.032"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview"
                app:layout_constraintVertical_bias="1.0"
                />
            <Button
                android:text="@string/review_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="20sp"
                android:onClick="viewReviews"
                android:layout_marginBottom="2dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:background="@color/colorAccent"
                android:id="@+id/button"
                app:layout_constraintTop_toBottomOf="@id/expandableListView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="1.0"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="20dp"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:id="@+id/fav_fab"
        android:src="@drawable/ic_favorite_border_48px"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.design.widget.CoordinatorLayout>
